# CV-Code

./: README.md
c_project/ex1_sol/: CMakeLists.txt  chessSystem.h
c_project/ex1_sol/data_types/: game.c  player.h  tournament.c  tournament.h
c_project/ex1_sol/dry/: DrySpring2021.c
cpp_project/ex2_sol/: CMakeLists.txt
cpp_project/ex2_sol/partA/: examDetails.cpp  examDetails.h  main.cpp  part_a_test.cpp  sortedList.h
cpp_project/ex2_sol/partB/: Auxiliaries.h  Board.h  Character.h  Exceptions.cpp  Medic.cpp  Medic.h  Sniper.cpp  Soldier.cpp
ex1/ex1_sol/: chessSystem.c
ex1/ex1_sol/data_types/: chessTournament.c  chessTournament.h  game.h  player.c
ex1/ex1_sol/dry/: DrySpring2021.h
ex1/ex1_sol/tests/: chessSystemTestsExample.c
ex2/ex2_sol/partB/: Character.cpp  Exceptions.h  Game.cpp  Game.h  Sniper.h  Soldier.h  explore_shared_ptr.cpp  explore_shared_ptr.h  gameTest.cpp  testing_my_self.cpp
python_project/ex3/: gradesCalc.py  input_path  test.py
python_project/ex3/tests/: input
